add function getAll()

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -91,7 +91,7 @@
               </a>
               </div>
               <div style="width: 100%;">
-                <button type="button" class="btn btn-outline-dark" style="width: 100%;" data-mdb-ripple-color="dark" onclick="test()">
+                <button id="show-all" type="button" class="btn btn-outline-dark" style="width: 100%;" data-mdb-ripple-color="dark" ">
                   Show All
                 </button>
               </div>
