--- a/client/src/index3.html
+++ b/client/src/index3.html
@@ -197,6 +197,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="/main.bundle.js"></script>
 </body>
 </html>
