--- a/client/src/index.html
+++ b/client/src/index.html
@@ -70,7 +70,7 @@
               <div>Comment</div>
               <div>Deadline</div>
               <div>
-                <a class="btn btn-primary" style="background-color: #25d366;" href="#!" role="button"
+                <a id="refresh" class="btn btn-primary" style="background-color: #25d366;" href="#!" role="button"
                 ><i class="fas fa-sync" ></i></a>
               </div>
   
