--- a/client/src/index.html
+++ b/client/src/index.html
@@ -87,7 +87,7 @@
 
               <div id="fill-data-task">
                 <hr>
-                <h4 style="margin-left: 4em;">Fill  form: </h4>
+                <h4 style="margin-left: 4em;">Fill in form: </h4>
                 <hr>
                 <div class="form-outline" style="margin-top: 1em;">
                   <input type="text" id="tag-select" class="form-control" />
@@ -99,7 +99,8 @@
                   <label class="form-label" for="typeText">Comment</label>
                 </div>
                 <hr>
-                <input id="deadline-select" type="date" style=" width: 100%;">
+        
+                <input id="deadline-select" type="date" style=" width: 100%;" value="2021-01-01">
                 <hr>
 
                 <select name="priority" id="priority-select" style=" width: 100%;">
@@ -120,7 +121,7 @@
                 <hr>
                 <h4 id="form-id"></h4>
                 <hr>
-                <h4 style="margin-left: 4em;">Fill in the form: </h4>
+                <h4 style="margin-left: 4em;">Fill in the update form: </h4>
                 <hr>
                 <div class="form-outline" style="margin-top: 1em;">
                   <input type="text" id="tag-select-up" class="form-control" />
@@ -132,7 +133,7 @@
                   <label class="form-label" for="typeText">Comment</label>
                 </div>
                 <hr>
-                <input id="deadline-select-up" type="date" style=" width: 100%;">
+                <input id="deadline-select-up" type="date" style=" width: 100%;" value="2021-01-01">
                 <hr>
                 <select name="priority" id="priority-select-up" style=" width: 100%;">
                   <option value="3">Low</option>
